--- a/docs/instagas/1-overview.mdx
+++ b/docs/instagas/1-overview.mdx
@@ -7,48 +7,46 @@ image: /img/posters/paymaster-meta.png
 
 # InstaGas
 
-InstaGas is a **no-code** platform that allows you to sponsor gas fees for end-users by
-creating customized gas policies tailored to their specific smart contracts and use cases.
+InstaGas is a **no-code** platform enabling you to sponsor gas fees for end users by creating customized gas policies tailored to specific smart contracts and use cases.
 
 ![candide-instagas-logo](/img/logo/instagas-logo.png)
 
-## Who is this for?
+## Who is This For?
 
-InstaGas is designed for Apps that want to simplify the user experience by abstracting away gas costs, **without the need for a complex wallet integration**. 
-InstaGas is ideal for a variety of Apps, including:
+InstaGas is designed for apps that want to simplify user experience by abstracting gas costs **without complex wallet integration**.
+InstaGas is ideal for:
 
 * DeFi exchanges
 * Lending protocols
 * Web3 games
-* NFTs Collections and marketplaces
-* And many more..
+* NFT collections and marketplaces
+* And more
 
-To see more examples of use cases, visit our [Usecases Categories](/instagas/usecases) page.
+For more examples, visit our [Use Cases Categories](/instagas/usecases) page.
 
-## How it works
+## How It Works
 
-1. Set up a gas policy on the [dashboard](https://dashboard.candide.dev).
-2. Make the policy `public` by toggling the privacy rule in General Rules settings.
-3. Customize your policy with rules that align with your app's needs.
-4. Top up your team balance and transfer funds to the policy.
+1. Set up a gas policy on the [dashboard](https://dashboard.candide.dev)
+2. Make the policy `public` by toggling the privacy rule in General Rules settings
+3. Customize your policy with rules aligned with your app's needs
+4. Top up your team balance and transfer funds to the policy
 
 Once your policy is active:
 
-- It becomes discoverable by all wallets that uses Candide's [Paymaster API](/wallet/paymaster/rpc-methods/).
-- Any transaction that matches the policy's rules will have its gas fees sponsored
-- You can monitor the performance of your policy through the Analytics tab and the UserOperation tab.
+- It becomes discoverable by all wallets using Candide's [Paymaster API](/wallet/paymaster/rpc-methods/)
+- Any transaction matching the policy's rules will have gas fees sponsored
+- Monitor policy performance through the Analytics and UserOperation tabs
 
 ## Rules Overview
 
-InstaGas provides a set of rules to customize gas policies for Apps. These rules are categorized into four main sections: 
+InstaGas provides customizable rules for gas policies, categorized into four sections:
 1. General Rules
 2. Account Rules
 3. Access Rules
 4. Transaction Rules
 
-Learn more in details about [Gas Policies and Rules](/instagas/gas-policies) in the next page.
-
+Learn more about [Gas Policies and Rules](/instagas/gas-policies) on the next page.
 
 ## Support
 
-Have any questions? We're here to help. [Get in touch](https://cal.com/candidelabs/30mins) with the founders who will personally guide you through setting up a gas policy and get personalized assistance.
+Have questions? We're here to help. [Get in touch](https://cal.com/candidelabs/30mins) with the founders for personalized guidance on setting up a gas policy.
