--- a/docs/instagas/5-architecture.mdx
+++ b/docs/instagas/5-architecture.mdx
@@ -27,10 +27,10 @@ Gas Policies are set up for a defined time period and can include various rule t
 
 The steps to set up a Gas Policy are as follows:
 
-1. Sign up on the [dashboard](https:dashboard.candide.dev)  
-2. Create a new Gas Policy on a specific network
-3. Configure the policy rules  
-4. Fund the policy and activate it
+1. Sign up on the [dashboard](https://dashboard.candide.dev)
+2. Create a new Gas Policy on a specific network.
+3. Configure the policy rules.
+4. Fund the policy and activate it.
 
 
 ![instagas-flow](/img/instagas-flow.svg)
