--- a/docs/wallet/abstractionkit/4.utilities.mdx
+++ b/docs/wallet/abstractionkit/4.utilities.mdx
@@ -5,7 +5,7 @@ keywords: [utilities, "4337", sdk, account-abstraction, helpers]
 ---
 
 # Utilities
-A set of utilities for ERC-4337 Account Abstraction to help you with your developement
+A set of utilities for ERC-4337 Account Abstraction to help you with your development.
 
 ## UserOperation utils
 
@@ -18,7 +18,7 @@ A set of utilities for ERC-4337 Account Abstraction to help you with your develo
 [createPackedUserOperationV6](https://github.com/candidelabs/abstractionkit/blob/98853f30861382a534abf667ced83d47b6c9da0b/src/utils.ts#L60C17-L60C44)
 
 ### createPackedUserOperationV7
-#### Source
+#### Source code
 [createPackedUserOperationV7](https://github.com/candidelabs/abstractionkit/blob/98853f30861382a534abf667ced83d47b6c9da0b/src/utils.ts#L100C17-L100C44)
 
 ### fetchAccountNonce
@@ -30,16 +30,17 @@ A set of utilities for ERC-4337 Account Abstraction to help you with your develo
 [calculateUserOperationMaxGasCost](https://github.com/candidelabs/abstractionkit/blob/98853f30861382a534abf667ced83d47b6c9da0b/src/utils.ts#L349C17-L349C49)
 
 ### getBalance
-Returns the balance of an account in the entrypoint contract
-
-## simulateUserOperationWithTenderlyAndCreateShareLink
-Simulate a userOperation with Tenderly and returns a link
+Returns the balance of an account in the EntryPoint contract.
 
 #### Source code
 [getBalance](https://github.com/candidelabs/abstractionkit/blob/b1826217624c1f7105fef58f56c3ffab93a57a4b/src/utils.ts#L457)
 
+### simulateUserOperationWithTenderlyAndCreateShareLink
+Simulates a UserOperation with Tenderly and returns a shareable link.
+
 ### getDepositInfo
-Returns the full deposit info of an account in the entrypoint contract
+Returns the full deposit information of an account in the EntryPoint contract.
+
 #### Source code
 [getDepositInfo](https://github.com/candidelabs/abstractionkit/blob/b1826217624c1f7105fef58f56c3ffab93a57a4b/src/utils.ts#L468)
 
