--- a/docs/wallet/bundler/3-rpc-endpoints.mdx
+++ b/docs/wallet/bundler/3-rpc-endpoints.mdx
@@ -148,7 +148,7 @@ export const testChainList = [
     chainHandle: "celo-alfajores",
   },
   {
-    network: "BnB Smart Chain Tesnet",
+    network: "BnB Smart Chain Testnet",
     logo: "/img/networks/56.png",
     chainId: 97,
     chainHandle: "bnb",
