--- a/docs/wallet/guides/1-send-gasless-tx.mdx
+++ b/docs/wallet/guides/1-send-gasless-tx.mdx
@@ -10,10 +10,9 @@ import TabItem from "@theme/TabItem";
 
 # Gas Sponsorship with Paymaster
 
-Learn how to sponsor gas fees for UserOperations using Candide's Paymaster [InstaGas](/instagas/overview/), with both public and private gas policies. 
+Sponsor gas fees for UserOperations using Candide's Paymaster [InstaGas](/instagas/overview/) with public and private gas policies.
 
- 
-> If you need help with the basics of smart accounts, start with the [Getting Started Guide](/wallet/guides/getting-started/).
+> For smart account basics, see the [Getting Started Guide](/wallet/guides/getting-started/).
 
 <img src="/img/gasless-transaction-screen.png" style={{ width: "300px" }} />
 
@@ -21,13 +20,13 @@ Learn how to sponsor gas fees for UserOperations using Candide's Paymaster [Inst
 
 ### Setup Gas Policy
 
-If you want to create your own private gas policy to sponsor specific transactions:
+To create a private gas policy for sponsoring specific transactions:
 
 1. Create an account on the [Candide Dashboard](https://dashboard.candide.dev)
 2. Navigate to Gas Policies and create a new private policy
-3. Configure sponsorship rules - Set [rules and conditions](/instagas/gas-policies/) for which transactions to sponsor
-4. Fund your policy - Deposit Native Tokens to cover the gas costs
-5. Copy the Policy ID - You'll need this to reference your policy
+3. Configure sponsorship [rules and conditions](/instagas/gas-policies/) for transaction sponsorship
+4. Fund your policy by depositing native tokens to cover gas costs
+5. Copy the Policy ID for referencing your policy
 
 #### Environment Configuration
 
