--- a/docs/wallet/guides/2-pay-gas-in-erc20.mdx
+++ b/docs/wallet/guides/2-pay-gas-in-erc20.mdx
@@ -10,19 +10,19 @@ import TabItem from "@theme/TabItem";
 
 # Pay Gas with ERC-20 Tokens
 
-Learn how to enable users to pay gas fees with ERC-20 tokens instead of native tokens using Candide's Token Paymaster.
+Enable users to pay gas fees with ERC-20 tokens instead of native tokens using Candide's Token Paymaster.
 
-> If you need help with the basics, check out the [Getting Started Guide](/wallet/guides/getting-started/).
+> For the basics, see the [Getting Started Guide](/wallet/guides/getting-started/).
 
 <img src="/img/network-fees-sponsorship.png" style={{ width: "300px" }} />
 
 ## Why Use Token Paymaster
 
-Token paymasters allow users to pay gas fees with ERC-20 tokens instead of ETH, removing the need for users to hold native tokens for transactions.
+Token paymasters enable users to pay gas fees with ERC-20 tokens instead of ETH, eliminating the need to hold native tokens for transactions.
 
-- **Better UX**: Users can transact with just the tokens they want to use
-- **Cost calculation**: Know how much tokens will be spent on gas
-- **Supported tokens**: USDC, USDT, and other [popular ERC-20 tokens](/wallet/paymaster/tokens-supported/)
+- **Better UX**: Users transact with only the tokens they need
+- **Cost Calculation**: Calculate exact token amounts for gas costs
+- **Supported Tokens**: USDC, USDT, and other [popular ERC-20 tokens](/wallet/paymaster/tokens-supported/)
 
 ## Quickstart
 
