--- a/docs/wallet/guides/3-multisig.mdx
+++ b/docs/wallet/guides/3-multisig.mdx
@@ -9,9 +9,9 @@ import TabItem from "@theme/TabItem";
 
 # Multisig Smart Accounts with Safe
 
-Learn how to create and manage multisig Safe accounts with multiple owners, threshold signing, and dynamic owner management for secure shared control.
+Create and manage multisig Safe accounts with multiple owners, threshold signing, and dynamic owner management for secure shared control.
 
-> If you need help with the basics, check out the [Getting Started Guide](/wallet/guides/getting-started/).
+> For the basics, see the [Getting Started Guide](/wallet/guides/getting-started/).
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/jZFx8cYRR48?si=EsS_DT5NRWyKDSaZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
