--- a/docs/wallet/guides/4-signing.mdx
+++ b/docs/wallet/guides/4-signing.mdx
@@ -1,12 +1,12 @@
 ---
-title: How to sign messages messages using a Safe Account and validating them
-description: Learn how sign messages using Safe wallet and verifing its signature using EIP-1271 Signature Validation 
+title: How to sign messages using a Safe Account and validate them
+description: Learn how to sign messages using Safe wallet and verify its signature using EIP-1271 Signature Validation
 keywords: [signing-messages, smart-contract-signature, eip-1271]
 ---
 
-# Sign & Validate a Message with a Smart Wallet 
+# Sign & Validate a Message with a Smart Wallet
 
-Smart wallets can sign arbitrary messages similar to EOAs. Learn how sign messages using Safe wallet and verifing its signature using EIP-1271 Signature Validation.
+Smart wallets can sign arbitrary messages similar to EOAs. Learn how to sign messages using Safe wallet and verify signatures using EIP-1271 Signature Validation.
 
 ## Single Owner Safe
 
