--- a/docs/wallet/guides/9-simulate-transaction.mdx
+++ b/docs/wallet/guides/9-simulate-transaction.mdx
@@ -6,19 +6,19 @@ description: Learn how to simulate calldata and User Operation using Tenderly to
 
 # Simulate Transactions with Tenderly
 
-This guide will walk you through using abtractionkit to simulate UserOperations and raw smart contract calldata with [Tenderly](https://tenderly.co/). 
-Simulating transactions allows you to:
+This guide demonstrates using AbstractionKit to simulate UserOperations and raw smart contract calldata with [Tenderly](https://tenderly.co/).
+Simulating transactions enables you to:
 
-* Test transaction behaviors.
-* Debug potential issues before they occur on-chain.
-* Verify outcomes and state changes.
-* Potentially show end-users a preview of what their transaction will do before they sign.
+* Test transaction behavior
+* Debug potential issues before on-chain execution
+* Verify outcomes and state changes
+* Preview transaction effects for end users before signing
 
-**To run a complete example**: [simulate-with-tenderly](https://github.com/candidelabs/abstractionkit-examples/blob/main/simulate-with-tenderly/simulate-with-tenderly.ts).
- 
+**Complete example**: [simulate-with-tenderly](https://github.com/candidelabs/abstractionkit-examples/blob/main/simulate-with-tenderly/simulate-with-tenderly.ts)
+
 ## Configuration
 
-You will need the following configured with tenderly in order to use their services. 
+Configure the following Tenderly settings to use their services: 
 
 1. Visit [dashboard.tenderly.co](https://dashboard.tenderly.co)
 2. Create a free account
