--- a/docs/wallet/guides/magic.mdx
+++ b/docs/wallet/guides/magic.mdx
@@ -1,17 +1,17 @@
 ---
 title: How to use Magic service as an authentication scheme for smart accounts using abstractionkit
-description: Learn how to offer a recovery options for your user using Magic and AbstractinKit
+description: Learn how to offer recovery options for your users using Magic and AbstractionKit
 image: /img/posters/abstractionkit-meta.png
 keywords: [mpc,hosted-wallets,social-login, passkeys, biometrics]
 ---
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-# Add an Social Account as a Recovery Method using Magic
+# Add a Social Account as a Recovery Method using Magic
 
-[Magic](https://magic.link) is a popular hosted wallet provider for EOAs. It enable users to login using various authentication methods like Social Logins and Email OTP. 
+[Magic](https://magic.link) is a popular hosted wallet provider for EOAs, enabling users to log in using authentication methods like Social Logins and Email OTP.
 
-To leverage the full potential of Account Abstraction, you can combine Magic with AbstractionKit to enable email / social recovery experience, while using a Smart Account as the smart wallet to sponsor gas for users, batch transactions, and more.
+Leverage the full potential of Account Abstraction by combining Magic with AbstractionKit to enable email/social recovery experiences while using a Smart Account to sponsor gas, batch transactions, and more.
 
 Below are some relevant links that provide additional information and resources which you might find helpful as you go through this guide.
 
