--- a/docs/wallet/guides/turnkey.mdx
+++ b/docs/wallet/guides/turnkey.mdx
@@ -1,6 +1,6 @@
 ---
 title: How to use Turnkey service as recovery mechanism for smart accounts using abstractionkit
-description: Learn how to offer a recovery option for your user using Turnkey and AbstractinKit
+description: Learn how to offer a recovery option for your users using Turnkey and AbstractionKit
 keywords: ["turnkey", "email recovery", "smart wallet recovery"]
 ---
 import Tabs from "@theme/Tabs";
@@ -8,9 +8,9 @@ import TabItem from "@theme/TabItem";
 
 # Use Turnkey with AbstractionKit
 
-[Turnkey](https://turnkey.com) offers a flexible private key management solution that leverages  AWS Nitros Systems to secure users keys.
+[Turnkey](https://turnkey.com) offers a flexible private key management solution leveraging AWS Nitro Systems to secure user keys.
 
-To fully leverage the potential of Account Abstraction, consider combining Turnkey with AbstractionKit to enable a trusted recoverer. Enabling the Account recovery module will require an onchain transaction. To add convenience for your users, you can batch the recovery transactions and sponsor their gas fees. 
+Fully leverage Account Abstraction by combining Turnkey with AbstractionKit to enable a trusted recoverer. Enabling the Account Recovery Module requires an on-chain transaction. For user convenience, batch recovery transactions and sponsor gas fees. 
 
 Relevant links for additional information during this guide:
 - [High level explanation: How on-chain guardian recovery works](https://docs.candide.dev/wallet/plugins/recovery-with-guardians/)
