--- a/docs/wallet/plugins/3-how-to-add-a-guardian.mdx
+++ b/docs/wallet/plugins/3-how-to-add-a-guardian.mdx
@@ -40,7 +40,7 @@ yarn add abstractionkit safe-recovery-service-sdk
 
 ### Initialize Recovery Module
 
-Initialize a SocialRecoveryModule instance. By default, the grace period for recovery is set to 3 days. 
+Initialize a SocialRecoveryModule instance. The default grace period for recovery is 3 days. 
 
 ```ts
 import { SocialRecoveryModule } from "abstractionkit";
