--- a/docs/wallet/plugins/5-recovery-alerts-guide.mdx
+++ b/docs/wallet/plugins/5-recovery-alerts-guide.mdx
@@ -9,17 +9,17 @@ import TabItem from "@theme/TabItem";
 
 # Recovery Alert Subscription Guide
 
-Learn how to set up email and SMS notifications for recovery requests to keep Safe account owners informed of any recovery attempts on their accounts. This security feature provides an essential early warning system during recovery processes.
+Set up email and SMS notifications for recovery requests to keep Safe account owners informed of recovery attempts. This security feature provides an essential early warning system during the recovery process.
 
-> If you need help setting up the recovery module first, check out the [Enable Recovery Module and Add Guardians](/wallet/plugins/how-to-add-a-guardian/) guide.
+> To set up the recovery module first, see the [Enable Recovery Module and Add Guardians](/wallet/plugins/how-to-add-a-guardian/) guide.
 
 ## Overview
 
 The Recovery Alert system provides:
 
 1. **Instant Notifications**: Immediate email and SMS alerts when recovery requests are initiated
-2. **On-chain Monitoring**: Tracks on-chain recoveries across all supported networks
-3. **Grace Period Warnings**: Notifications during the grace period so owners can respond to unauthorized attempts
+2. **On-Chain Monitoring**: Tracks on-chain recoveries across all supported networks
+3. **Grace Period Warnings**: Alerts during the grace period enabling owners to respond to unauthorized attempts
 4. **Signature Verification**: Only verified account owners can subscribe to alerts
 
 To learn more, visit the [Safe Recovery Service API](/wallet/recovery/overview/) section.
@@ -73,7 +73,7 @@ USER_PHONE=+1234567890
 
 ## Alert Subscription Steps
 
-> You can [fork the complete code](https://github.com/candidelabs/safe-recovery-service-sdk/tree/main/examples/02-alerts-subscription) and follow along.
+> Fork the [complete code](https://github.com/candidelabs/safe-recovery-service-sdk/tree/main/examples/02-alerts-subscription) to follow along.
 
 ### Step 1: Initialize Alert Service
 
