--- a/docs/wallet/plugins/6-add-candide-guardian.mdx
+++ b/docs/wallet/plugins/6-add-candide-guardian.mdx
@@ -9,19 +9,19 @@ import TabItem from "@theme/TabItem";
 
 # Add Candide Guardian to Safe Account
 
-Learn how to integrate [Candide Guardian](/wallet/recovery/auth-api/) as a trusted recovery service for users Safe accounts. Candide Guardian provides secure account recovery through email and SMS verification.
+Integrate [Candide Guardian](/wallet/recovery/auth-api/) as a trusted recovery service for user Safe accounts. Candide Guardian provides secure account recovery through email and SMS verification.
 
-> If you need to set up the recovery module, check out the [Enable Recovery Module and Add Guardians](/wallet/plugins/how-to-add-a-guardian/).
+> To set up the recovery module, see [Enable Recovery Module and Add Guardians](/wallet/plugins/how-to-add-a-guardian/).
 
 ## What is Candide Guardian?
 
-Candide Guardian is a managed recovery service that acts as a trusted guardian for users Smart Accounts. Unlike personal guardians, Candide Guardian:
+Candide Guardian is a managed recovery service acting as a trusted guardian for user Smart Accounts. Unlike personal guardians, Candide Guardian provides:
 
-- **Familiar Security**: Supports email, SMS, or both for recovery verification
-- **No key management required**: Users don't need to manage guardian private keys
-- **Automated signing**: Service automatically provides guardian signatures after verification
-- **Grace period protection**: Built-in security delay before recovery execution
-- **Gas sponsorship**: Recovery transactions can be sponsored, removing gas barriers
+- **Familiar Security**: Email, SMS, or both for recovery verification
+- **No Key Management**: Users don't manage guardian private keys
+- **Automated Signing**: Service automatically provides guardian signatures after verification
+- **Grace Period Protection**: Built-in security delay before recovery execution
+- **Gas Sponsorship**: Sponsored recovery transactions remove gas barriers
 
 ## Quickstart
 
