--- a/docs/wallet/technical-reference/1.deployments.mdx
+++ b/docs/wallet/technical-reference/1.deployments.mdx
@@ -1,7 +1,7 @@
 ---
 title: Deployment Addresses for all smart contracts that Candide uses
-description: All of the deployments to production networks that make up all contracts being used to build on Account Abstractions with Candide
-keywords: [deployments, addresses, etherscan, verifed]
+description: All deployments to production networks for contracts used to build with Account Abstraction on Candide
+keywords: [deployments, addresses, etherscan, verified]
 ---
 
 # Contract Deployments
@@ -42,16 +42,16 @@ import { NetworkList } from "/src/components/NetworkList";
 | AddModulesLib v0.2.0 | 0x8EcD4ec46D4D2a6B64fE960B3D64e8B94B2234eb |
 
 
-For Safe 4337 code and audits, refer to [safe-4337-module](https://github.com/safe-global/safe-modules-deployments/tree/main/src/assets/safe-4337-module)
+For Safe 4337 code and audits, refer to [safe-4337-module](https://github.com/safe-global/safe-modules-deployments/tree/main/src/assets/safe-4337-module).
 
 ## Social Recovery Module
 
-The address is expected to be different with different recovery grace periods. 
-Below are some that are deployed at 
+Addresses vary based on recovery grace periods.
+Deployments available for:
 - 3 Days
 - 7 Days
 - 14 Days
-- 3 mins (only recommended for Testnets)
+- 3 Minutes (testnets only)
 
 
 | Network                      | 3 Days Recovery Grace Period               | 7 Days Recovery Grace Period               | 14 Days Recovery Grace Period              | 3 minutes Recovery Grace Period            |
@@ -67,7 +67,7 @@ Below are some that are deployed at
 | Optimism                     | 0x38275826E1933303E508433dD5f289315Da2541c | 0x088f6cfD8BB1dDb1BB069CCb3fc1A98927D233f2 | 0x9BacD92F4687Db306D7ded5d4513a51EA05df25b |                                            |
 | Polygon                      | 0x38275826E1933303E508433dD5f289315Da2541c | 0x088f6cfD8BB1dDb1BB069CCb3fc1A98927D233f2 | 0x9BacD92F4687Db306D7ded5d4513a51EA05df25b |                                            |
 
-For smart contracts code, formal verificaton and audits, refer to [candide-contracts](https://github.com/candidelabs/candide-contracts).
+For smart contract code, formal verification, and audits, refer to [candide-contracts](https://github.com/candidelabs/candide-contracts).
 
 ## Safe Passkeys
 
